# stetic

./: ChangeLog  Makefile.am  Makefile.in  README  TODO  autogen.sh  configure.in  stetic.pc.in
glue/: Makefile.am  custom.c  notify.c  paramspec.c  value.c
libstetic/: AssemblyWidgetLibrary.cs  ClassDescriptor.cs  CommandAttribute.cs  CommandDescriptor.cs  CustomWidget.cs  DND.cs  DescriptionAttribute.cs  EditorAttribute.cs  EmbedWindow.cs  EnumDescriptor.cs  ErrorWidget.cs  GeneratorContext.cs  GladeException.cs  GladePropertyAttribute.cs  GladeUtils.cs  HandleWindow.cs  IContainerWrapper.cs  IContextMenuProvider.cs  IDesignArea.cs  IObjectWrapper.cs  IProject.cs  IResourceProvider.cs  IStetic.cs  IWidgetSite.cs  IWidgetWrapper.cs  IWindowWrapper.cs  ImageInfo.cs  ItemDescriptor.cs  ItemGroup.cs  ItemGroupCollection.cs  Makefile.am  ObjectReader.cs  ObjectWrapper.cs  ObjectWrapperAttribute.cs  ObjectWrapperType.cs  ObjectWriter.cs  ParamFlags.cs  ParamSpec.cs  Placeholder.cs  PreviewBox.cs  (+27 more)
libstetic/Metacity/: ButtonLayout.cs
libstetic/editor/: Accelerator.cs  ActionGroupEditor.cs  ActionItem.cs  ActionMenu.cs  ActionMenuBar.cs  ActionMenuItem.cs  ActionToolItem.cs  ActionToolbar.cs  Boolean.cs  Char.cs  Color.cs  EditIconDialog.cs  Enumeration.cs  File.cs  Flags.cs  FloatRange.cs  GroupPicker.cs  IconSelectorItem.cs  IconSelectorMenu.cs  IconSelectorMenuItem.cs  Identifier.cs  Image.cs  ImageSelector.cs  IntRange.cs  OptIntRange.cs  ResponseId.cs  SelectIconDialog.cs  SelectImageDialog.cs  StockIconList.cs  StockIconSelectorItem.cs  StockItem.cs  String.cs  StringArray.cs  Text.cs  TextEditor.cs  TextEditorDialog.cs  ThemedIcon.cs  ThemedIconList.cs  Translatable.cs
libstetic/undo/: ActionDiffAdaptor.cs  DiffGenerator.cs  UndoManager.cs  XmlDiffAdaptor.cs
libstetic/wrapper/: Action.cs  ActionGroup.cs  ActionMenu.cs  ActionMenuItem.cs  ActionToolbarWrapper.cs  ActionTree.cs  Alignment.cs  Arrow.cs  Bin.cs  Box.cs  Button.cs  ButtonBox.cs  Calendar.cs  CheckButton.cs  CheckMenuItem.cs  ColorButton.cs  ComboBox.cs  ComboBoxEntry.cs  Container.cs  Custom.cs  Dialog.cs  DrawingArea.cs  Entry.cs  EventBox.cs  Expander.cs  Fixed.cs  FontButton.cs  FontSelectionDialog.cs  Frame.cs  HBox.cs  HButtonBox.cs  HPaned.cs  HScale.cs  HScrollbar.cs  HSeparator.cs  Icon.cs  Image.cs  ImageMenuItem.cs  Label.cs  Menu.cs  (+42 more)
libsteticui/: ActionComponent.cs  ActionGroupComponent.cs  ActionGroupDesigner.cs  ActionGroupDesignerBackend.cs  ActionGroupEditSession.cs  ActionGroupToolbar.cs  Application.cs  ApplicationBackend.cs  ApplicationBackendController.cs  AssemblyResolver.cs  AssemblyWidgetLibrary.cs  CecilClassDescriptor.cs  CecilPropertyDescriptor.cs  CecilSignalDescriptor.cs  CecilWidgetLibrary.cs  Clipboard.cs  CodeGenerator.cs  CodeGeneratorInternalClass.cs  CodeGeneratorPartialClass.cs  Component.cs  ComponentEventHandler.cs  ComponentType.cs  ContextMenu.cs  Designer.cs  EmbedWindow.cs  Glade.cs  Grid.cs  GuiDispatchServerSink.cs  LibraryCache.cs  Makefile.am  Palette.cs  PaletteBackend.cs  PluggableWidget.cs  Project.cs  ProjectBackend.cs  ProjectView.cs  ProjectViewBackend.cs  PropertyEditor.cs  PropertyGrid.cs  PropertyTree.cs  (+14 more)
metacity-sharp/: Makefile.am  Metacity.metadata  metacity-api.raw  metacity-sources.xml  test-preview.cs
metacity-sharp/glue/: Makefile.am  generated.c
pixmaps/: COPIED  Makefile.am  Makefile.in
stetic/: Canvas.cs  Clipboard.cs  Configuration.cs  ContextMenu.cs  DesignerView.cs  FrameWrapper.cs  Glade.cs  GladeImport.cs  Grid.cs  HBoxWrapper.cs  HButtonBoxWrapper.cs  HPanedWrapper.cs  IDesignTimeContainer.cs  IObjectWrapper.cs  LibraryManagerDialog.cs  Makefile.am  Notify.cs  Palette.cs  ParamSpec.cs  Project.cs  ProjectView.cs  PropertyDescriptor.cs  PropertyEditor.cs  PropertyEditors.cs  PropertyGrid.cs  SignalsEditor.cs  Stetic.cs  TableWrapper.cs  UIManager.cs  VBoxWrapper.cs  VButtonBoxWrapper.cs  VPanedWrapper.cs  WidgetBox.cs  WidgetFactory.cs  WidgetSite.cs  WidgetWrapperAttribute.cs  WindowWrapper.cs  stetic.exe.config  stetic.glade  stetic.in  (+1 more)
stetic/editor/: Char.cs  Enumeration.cs  File.cs  FloatRange.cs  IntRange.cs  OptIntRange.cs  StockItem.cs  String.cs
stetic/wrapper/: Arrow.cs  Box.cs  Button.cs  ButtonBox.cs  CheckButton.cs  ComboBox.cs  DefaultWidgets.cs  Dialog.cs  DrawingArea.cs  Entry.cs  Frame.cs  HBox.cs  HButtonBox.cs  HPaned.cs  HScrollbar.cs  HSeparator.cs  Icon.cs  Image.cs  Label.cs  Misc.cs  Notebook.cs  Paned.cs  ProgressBar.cs  RadioButton.cs  Range.cs  Scale.cs  SpinButton.cs  Statusbar.cs  Table.cs  TextView.cs  ToggleButton.cs  VBox.cs  VButtonBox.cs  VPaned.cs  VScrollbar.cs  VSeparator.cs  Widget.cs  Window.cs
stetic/wrappers/: DefaultWidgets.cs  Frame.cs  HPaned.cs  Table.cs  VBox.cs  VButtonBox.cs  VPaned.cs
widgets/: Alignment.cs  Arrow.cs  Box.cs  Button.cs  ButtonBox.cs  Calendar.cs  CheckButton.cs  ColorButton.cs  ComboBox.cs  Dialog.cs  DrawingArea.cs  Entry.cs  EventBox.cs  Expander.cs  FontButton.cs  Frame.cs  HBox.cs  HButtonBox.cs  HPaned.cs  HScale.cs  HScrollbar.cs  HSeparator.cs  Icon.cs  Image.cs  Label.cs  Makefile.am  MessageDialog.cs  Misc.cs  Notebook.cs  Paned.cs  ProgressBar.cs  RadioButton.cs  Range.cs  Scale.cs  ScrolledWindow.cs  SpinButton.cs  Statusbar.cs  Table.cs  TextView.cs  ToggleButton.cs  (+8 more)
